# src/data/swagger.json
@@ -210,12 +210,6 @@
           }
         }
       }
-    },
-    "securitySchemes": {
-      "basicAuth": {
-        "type": "http",
-        "scheme": "basic"
-      }
     }
   },
   "parameters": {
